--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Jacqueline Lee</title>
   </head>
   
-  <body style="background-color:rgb(239, 241, 243);">
+  <body style="background-color:#eff1f3;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
